tests/type-errors/invalid_init_asset_with_const_bad_type.arl
archetype invalid_init_asset_with_const_bad_type(const init_value : map<string, string>)

asset my_asset {
    k : string;
    v : nat;
} initialized with init_value

variable n : nat = 0

entry exec () {
  for i in my_asset do
    n += my_asset[i].v
  done
}
